data loader added

--- a/trials.ipynb
+++ b/trials.ipynb
@@ -37,27 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "599eafab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "PINECONE_API_KEY = \"pcsk_4BRfYd_Ncdg2tRXmJffVSzo1qLodYV6gvxzcdnr5ZraGeJUAM9xEjjYkRo8Ammwh7gpsHX\"\n",
+    "PINECONE_API_ENV = \"us-east-1\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a4081468",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## extract data from pdf"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cfa761b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data,glob='*.pdf',loader_cls=PyPDFLoader)\n",
+    "    documents = loader.load()\n",
+    "    return documents"
+   ]
   },
   {
    "cell_type": "code",
