extract the data

--- a/trials.ipynb
+++ b/trials.ipynb
@@ -30,6 +30,7 @@
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "from langchain.vectorstores import Pinecone\n",
     "from langchain.document_loaders import PyMuPDFLoader,DirectoryLoader\n",
+    "from langchain.document_loaders import DirectoryLoader, PyPDFLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.llms import CTransformers\n"
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cfa761b4",
    "metadata": {},
    "outputs": [],
@@ -71,11 +72,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4584e64f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 356 documents\n",
+      "A Treatment \n",
+      "Improvement \n",
+      "Protocol\n",
+      "Medication-Assisted Treatment\n",
+      "For Opioid Addiction in \n",
+      "Opioid Treatment Programs\n",
+      "TIP\n",
+      "43\n",
+      "U.S. DEPARTMENT OF HEALTH AND HUMAN SERVICES\n",
+      "Substance Abuse and Mental Health Services Administration\n",
+      "Center for Substance Abuse Treatment\n",
+      "www.samhsa.gov\n",
+      "MEDICATION-\n",
+      "ASSISTED\n",
+      "TREATMENT\n"
+     ]
+    }
+   ],
+   "source": [
+    "extracted_data = load_pdf(\"data/\")\n",
+    "print(f\"Loaded {len(extracted_data)} documents\")\n",
+    "print(extracted_data[0].page_content[:500])"
+   ]
   },
   {
    "cell_type": "code",
